<resources>
    <string name="app_name">Caluladora de Area</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="mensaje">Resultado</string>
    <string name="boton">Calcular Area</string>
    <string name="base">Base: </string>
    <string name="altura">Altura: </string>
    <string name="radio">Radio: </string>
    <string name="lado">Lado: </string>
    <string name="hNombre">Digíte un número</string>
    <string name="cuadro">Cuadro</string>
    <string name="triangulo">Triangulo</string>
    <string name="rectangulo">Rectangulo</string>
    <string name="circulo">Circulo</string>

</resources>